<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeatherActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="48dp"
            android:hint="@string/city_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/show_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_text_layout" />

        <TextView
            android:id="@+id/tempf_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/temperature_in_fahrenheit"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/city_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/show_result_button" />

        <TextView
            android:id="@+id/tempc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/temperature_in_centigrade"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/city_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/tempf_text_view" />

        <TextView
            android:id="@+id/latitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/latitude"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/city_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/tempc_text_view" />

        <TextView
            android:id="@+id/longitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/longitude"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/city_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/latitude_text_view" />

        <TextView
            android:id="@+id/tempf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tempf_text_view"
            app:layout_constraintTop_toTopOf="@+id/tempf_text_view" />

        <TextView
            android:id="@+id/tempc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tempc_text_view"
            app:layout_constraintTop_toTopOf="@+id/tempc_text_view" />

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/latitude_text_view"
            app:layout_constraintTop_toTopOf="@+id/latitude_text_view" />

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/longitude_text_view"
            app:layout_constraintTop_toTopOf="@+id/longitude_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>