<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="isVisible"
            type="boolean"

            />
        <variable
            name="isMargin"
            type="boolean"

            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".RegisterActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10dp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:fontFamily="@font/lato_black"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/registration_form"
                    android:textAllCaps="true"
                    android:textColor="#0003DA"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_number_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:hint="@string/mobile_number"
                    app:counterMaxLength="10"
                    app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/purple_500"
                    app:startIconDrawable="@android:drawable/stat_sys_phone_call">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_number_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/full_name"
                    app:counterMaxLength="50"
                    app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="40"
                        android:textColor="#000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/gender_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/male" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_text_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:textColor="#000000" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/calender_picker"
                        android:layout_width="60dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@{isMargin ? @dimen/_10dp : @dimen/_30dp}"
                        android:background="#00FBFBFB"
                        android:contentDescription="@string/calendar"
                        android:padding="@dimen/_15dp"
                        android:scaleType="fitEnd"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/date_text_layout"
                        app:srcCompat="@drawable/ic_baseline_date_range_24" />

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="@{isVisible ? View.VISIBLE: View.GONE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_text_layout" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/age_text"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:background="@drawable/shape"
                    android:gravity="center_vertical"
                    android:hint="@string/age"
                    android:paddingStart="@dimen/_15dp"
                    android:paddingEnd="@dimen/_15dp"
                    android:textColor="#000000"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    app:drawableTint="@color/purple_500" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line1_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:hint="@string/address_line_1"
                    app:counterMaxLength="50"
                    app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_baseline_home_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line2_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line_2"
                    app:counterMaxLength="50">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pincode_text_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:hint="@string/pincode"
                        app:counterMaxLength="6"
                        app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
                        app:endIconMode="custom"
                        app:endIconTint="@color/purple_500"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pincode_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="6"
                            android:textColor="#000000" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/check_pincode_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/check"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:layout_editor_absoluteX="20dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/distric_text"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginBottom="@dimen/_4dp"
                    android:background="@drawable/shape"
                    android:gravity="center_vertical"
                    android:hint="@string/district"
                    android:paddingStart="@dimen/_15dp"
                    android:paddingEnd="@dimen/_15dp"
                    android:textColor="#000000"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    app:drawableTint="@color/purple_500">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="@dimen/_4dp"
                    android:background="@drawable/shape"
                    android:gravity="center_vertical"
                    android:hint="@string/state"
                    android:paddingStart="@dimen/_15dp"
                    android:paddingEnd="@dimen/_15dp"
                    android:textColor="#000000"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    app:drawableTint="@color/purple_500">

                </com.google.android.material.textview.MaterialTextView>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>